--- a/views/streaming.ejs
+++ b/views/streaming.ejs
@@ -8,7 +8,7 @@
 </main>
 <section>
     <h2>Streaming Essentials</h2>
-    <p>Streaming is probably one of the most straight forward methods of content creation which has lead to it becoming very popular over the past couple of years. Streaming is the production of live content and interacting with an audience while you do your streams. While websites like Twitch have had a large focus on video game content, live streaming has become a popular method of sharing ones experiences playing video games, drawing, making music, and so much more with their live audiences. While getting started has become more and more simple over the years, there's still a bit you should know before hitting the go live button. Below I've given the basics of what you need to get started and if you want to go more in-depth you can click the titles of each section.</p>
+    <p>Streaming is probably one of the most straight forward methods of content creation which has lead to it becoming very popular over the past couple of years. Streaming is the production of live content and interacting with an audience while you do your streams. While websites like Twitch have had a large focus on video game content, live streaming has become a popular method of sharing ones experiences playing video games, drawing, making music, and so much more with their live audiences. There are even full bootcamps that will teach you how to code on there. While getting started has become more and more simple over the years, there's still a bit you should know before hitting the go live button. Below I've given the basics of what you need to get started and if you want to go more in-depth you can click the titles of each section.</p>
 </section>
 <section>
     <h3><a href="#">Software</a></h3>
